--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
 					<li><a href="https://www.linkedin.com/company/grupo-inove-1/mycompany/?viewAsMember=true"
 							class="icon brands fa-linkedin"><span class="label">Linkedin/span></a></li>
 				</ul>
-				<span class="image main"><img src="https://i.imgur.com/9TpNse6.png" alt="" /></span>
+				<span class="image main"><img src="" alt="" /></span>
 			</article>
 
 
