--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
 						<a class="cor" href="https://www.grupoinove.srv.br/">solução</a> para sua empresa!<br /> <br>
 					</p>
 
-					<p class="texto"><span class="negrito">Proposta para o grupo de empresas pertencentes a Leandro de
-							Assis Lebrão, </span><br></p>
+					<p class="texto"><span class="negrito">Á empresa LCS <br>
+
+						Prezado Leandro de Assis Lebrão, </span><br></p>
 					<p class="texto">
 						Hoje, você está recebendo nossa proposta de investimento do Grupo Inove. Aproveite esta
 						oportunidade para consultar nossos profissionais altamente capacitados, prontos para fornecer o
@@ -269,7 +270,7 @@
 					Agradecemos a confiança em nosso trabalho e estamos à disposição para quaisquer esclarecimentos.
 				</p>
 
-
+				<span class="image main"><img src="https://i.imgur.com/BdDKctL.png" alt="" /></span>
 
 
 
@@ -305,7 +306,7 @@
 				</p>
 
 				<h2 class="major aplic"> PROPOSTA APLIC</h2>
-				<p class="texto"><span class="negrito">a.</span> Com foco em organização empresarial. <br>
+				<p class="texto"><span class="negrito">a. Com foco em Holding empresarial e patrimonial. <br></span>
 					<span class="negrito">b.</span> Consulte nossos consultores.
 				</p>
 
@@ -332,7 +333,7 @@
 					<li><a href="https://www.linkedin.com/company/grupo-inove-1/mycompany/?viewAsMember=true"
 							class="icon brands fa-linkedin"><span class="label">Linkedin/span></a></li>
 				</ul>
-				<span class="image main"><img src="" alt="" /></span>
+				<span class="image main"><img src="https://i.imgur.com/BdDKctL.png" alt="" /></span>
 			</article>
 
 
