--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
 				<p class="texto">
 
 
-					<span class="negrito">a.</span>Com foco em Recuperação Tributária.
+					<span class="negrito">a.</span>Com foco em Recuperação Tributária. <br>
 
 
 					<span class="negrito">b.</span>Consulte nossos contadores.
