--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						<a class="cor" href="https://www.grupoinove.srv.br/">solução</a> para sua empresa!<br /> <br>
 					</p>
 
-					<p class="texto"><span class="negrito">Á empresa LCS <br>
+					<p class="texto"><span class="negrito">Ao Grupo LCS <br>
 
 						Prezado Leandro de Assis Lebrão, </span><br></p>
 					<p class="texto">
