--- a/index.html
+++ b/index.html
@@ -34,14 +34,12 @@
 					<p class="negrito texto">Grupo de empresa experiente que fornece soluções sob medida para atender às
 						necessidades
 						de nossos
-						clientes. Somos a
-
-						<a class="cor" href="https://www.grupoinove.srv.br/">solução</a> para sua empresa!<br /> <br>
+						clientes. Somos a solução para sua empresa!<br /> <br>
 					</p>
 
 					<p class="texto"><span class="negrito">Ao Grupo LCS <br>
 
-						Prezado Leandro de Assis Lebrão, </span><br></p>
+							Prezado Leandro de Assis Lebrão, </span><br></p>
 					<p class="texto">
 						Hoje, você está recebendo nossa proposta de investimento do Grupo Inove. Aproveite esta
 						oportunidade para consultar nossos profissionais altamente capacitados, prontos para fornecer o
@@ -172,7 +170,7 @@
 
 			<!-- About -->
 			<article id="about">
-				<h2 class="major alves"> PROPOSTA ALVES</h2>
+				<h2 class="major alves"> PROPOSTA ALVES & LARANJEIRA</h2>
 				<p class="texto"><span class="negrito">Reestruturação Jurídica, Trabalhista e Empresarial – Empresa de
 						Engenharia e Grupo Econômico</span> Com foco em holding empresarial. <br>
 					<br>
@@ -197,7 +195,7 @@
 					<br>
 					<span class="negrito">4. Análise de Convenções Coletivas Vigentes</span> <br>
 					Levantamento, leitura e interpretação das CCTs aplicáveis, verificando obrigações, adicionais,
-					benefícios e reajustes.
+					benefícios e reajustes, bem como o assessoramento e apoio na negociação com o sindicato.
 					<br>
 					<span class="negrito">5. Auditoria de Folha de Pagamento</span> <br>
 					Verificação detalhada da folha dos últimos 12 meses: encargos, adicionais, descontos e conformidade
@@ -254,19 +252,23 @@
 					recomendações práticas e um cronograma de execução.
 					<br>
 					<span class="negrito">19. FIT – Fundo Individual de Contingência Jurídica</span><br>
-					Uma reserva financeira inteligente e estratégica, criada para proteger sua empresa e seu patrimônio pessoal contra possíveis riscos de condenações judiciais futuras.
+					Uma reserva financeira inteligente e estratégica, criada para proteger sua empresa e seu patrimônio
+					pessoal contra possíveis riscos de condenações judiciais futuras.
 				</p>
 
 				<p><span class="negrito">Metodologia</span>
-					Alocação de advogado full-time por 30 dias dentro da empresa. Levantamento de informações com todas
-					as áreas internas. Entrevistas com gestores e diretores. Análise documental aprofundada.
+					Alocação de advogado com visitas presenciais à empresa, conforme a necessidade, para levantamento de
+					informações com todas as áreas internas, realização de entrevistas com gestores e diretores, e
+					condução de análise documental aprofundada.
 				</p>
 				<p><span class="negrito">Proposta de Investimento: </span> <br>
 					Para a execução de todo o escopo jurídico previsto nesta proposta, o valor mensal do investimento é
 					de R$10.000,00. <br>
 
 					Aplicando um desconto especial de 33%, o valor com desconto passa a ser de R$6.700,00 por mês. <br>
-
+					<br>
+					À medida que as implementações forem sendo realizadas e o escopo de trabalho ampliado, o valor mensal será ajustado progressivamente até atingir o valor integral de R$ 10.000,00.
+<br>
 					Agradecemos a confiança em nosso trabalho e estamos à disposição para quaisquer esclarecimentos.
 				</p>
 
