--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<div class="content">
 				<div class="inner">
 					<h1 class="cor">PROPOSTA COMERCIAL</h1>
-					<p class="negrito texto">Grupo de empresa experiente que fornece soluções sob medida para atender às
+					<p class="negrito texto">Somos um grupo de empresas experiente que fornece soluções sob medida para atender às
 						necessidades
 						de nossos
 						clientes. Somos a solução para sua empresa!<br /> <br>
@@ -170,7 +170,8 @@
 
 			<!-- About -->
 			<article id="about">
-				<h2 class="major alves"> PROPOSTA ALVES & LARANJEIRA</h2>
+				<h2 class="major alves"> PROPOSTA ALVES & <br>
+					LARANJEIRA</h2>
 				<p class="texto"><span class="negrito">Reestruturação Jurídica, Trabalhista e Empresarial – Empresa de
 						Engenharia e Grupo Econômico</span> Com foco em holding empresarial. <br>
 					<br>
@@ -247,11 +248,9 @@
 					Diagnóstico jurídico das demais empresas do grupo econômico, replicando os mesmos critérios de
 					análise: contratos, folha, convenções, riscos e passivos.
 					<br>
-					<span class="negrito">18. Elaboração de Relatório Final e Plano de Ação</span> <br>
-					Apresentação de um relatório completo, com diagnóstico geral, pontos críticos encontrados,
-					recomendações práticas e um cronograma de execução.
+					
 					<br>
-					<span class="negrito">19. FIT – Fundo Individual de Contingência Jurídica</span><br>
+					<span class="negrito">18. FIT – Fundo Individual de Contingência Jurídica</span><br>
 					Uma reserva financeira inteligente e estratégica, criada para proteger sua empresa e seu patrimônio
 					pessoal contra possíveis riscos de condenações judiciais futuras.
 				</p>
